--- a/mod2_sol/index.html
+++ b/mod2_sol/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Coursera Module 2 Assignment</title>
   <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
-  <link href='D:\Sublime Text 3\Mypages\sol2.css' rel='stylesheet' type='text/css'>
+  <link href='css\sol2.css' rel='stylesheet' type='text/css'>
 </head>
 <body>
   <div class="container">
